--- a/problems/CMakeLists.txt
+++ b/problems/CMakeLists.txt
@@ -37,3 +37,4 @@ myexe(Problem125 "125_PalindromicSums.cpp")
 myexe(Problem126 "126_CuboidLayers.cpp")
 myexe(Problem127 "127_AbcHits.cpp")
 myexe(Problem128 "128_HexagonalTileDifferences.cpp")
+myexe(Problem129 "129_RepunitDivisibility.cpp")
