130번 풀이 추가

--- a/problems/CMakeLists.txt
+++ b/problems/CMakeLists.txt
@@ -38,3 +38,4 @@ myexe(Problem126 "126_CuboidLayers.cpp")
 myexe(Problem127 "127_AbcHits.cpp")
 myexe(Problem128 "128_HexagonalTileDifferences.cpp")
 myexe(Problem129 "129_RepunitDivisibility.cpp")
+myexe(Problem130 "130_CompositesWithPrimeRepunitProperty.cpp")
