조합 테스트 추가

--- a/problems/CMakeLists.txt
+++ b/problems/CMakeLists.txt
@@ -39,3 +39,4 @@ myexe(Problem127 "127_AbcHits.cpp")
 myexe(Problem128 "128_HexagonalTileDifferences.cpp")
 myexe(Problem129 "129_RepunitDivisibility.cpp")
 myexe(Problem130 "130_CompositesWithPrimeRepunitProperty.cpp")
+myexe(Test "Test.cpp")
